# CreatureForWebGL

./: .gitignore  README.md  build.py  package-lock.json  package.json  rollup.config.js  rollup.config.mjs
.github/workflows/: build.yml
Release/: creature.d.ts
src/: CMakeLists.txt  Creature.js  CreatureInit.js  CreatureInit.mjs
src/cpp/: CreaturePackManager.cpp
src/js/: creature.src.js  license.js  main.js  main.mjs
